<?xml version="1.0"?>
<package format="3">
  <name>gpr</name>
  <version>0.0.1</version>
  <description>The gpr package (ROS2 Humble)</description>
  <maintainer email="klas@todo.todo">klas</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
  <build_type>ament_cmake</build_type>
</export>
</package>
