<?xml version="1.0"?>
<package format="3">
  <name>putn_launch</name>
  <version>0.0.1</version>
  <description>Launch files for PUTN (ROS2 Humble)</description>
  <maintainer email="luzong@todo.todo">luzong</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
  <build_type>ament_cmake</build_type>
</export>
</package>
