<?xml version="1.0"?>
<package format="3">
  <name>putn_map</name>
  <version>0.0.1</version>
  <description>The putn_map package (ROS2 Humble)</description>
  <maintainer email="luzong@todo.todo">luzong</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo</exec_depend>

  <export>
  <build_type>ament_cmake</build_type>
</export>
</package>
