<?xml version="1.0"?>
<package format="3">
  <name>local_planner</name>
  <version>0.0.1</version>
  <description>The local_planner package (ROS2 Humble)</description>
  <maintainer email="zli@todo.todo">zli</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <export>
  <build_type>ament_cmake</build_type>
</export>
</package>
