<?xml version="1.0"?>
<package format="3">
  <name>putn</name>
  <version>0.0.1</version>
  <description>PUTN planning ported to ROS2 Humble</description>

  <maintainer email="luzong@todo.todo">luzong</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>

  <export>
  <build_type>ament_cmake</build_type>
</export>
</package>
