<package format="3">
  <version>0.0.1</version>
  <name>rviz_plugins</name>
  <description>Additional plugins for RViz (ROS2)</description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rviz_plugins</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>qtbase5-dev</exec_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
