<?xml version="1.0"?>
<package format="3">
  <name>waypoint_generator</name>
  <version>0.0.1</version>
  <description>Waypoint generator ported to ROS2 Humble</description>
  <maintainer email="eeshaojie@todo.todo">Shaojie Shen</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
  <build_type>ament_cmake</build_type>
</export>
</package>


