<?xml version="1.0"?>
<package format="3">
  <name>scout_control</name>
  <version>0.0.1</version>
  <description>The scout_control package (ROS2 Humble)</description>
  <maintainer email="zsq@todo.todo">zsq</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
  <build_type>ament_cmake</build_type>
</export>
</package>
