<?xml version="1.0"?>
<package format="3">
  <name>scout_description</name>
  <version>0.4.3</version>
  <description>AgileX Scout URDF description (ROS2 Humble)</description>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  <build_type>ament_cmake</build_type>
</export>
</package>
