<?xml version="1.0"?>
<package format="3">
  <name>scout_gazebo_sim</name>
  <version>0.0.2</version>
  <description>AgileX Scout 2.0 Simulator bringup (ROS2 Humble)</description>

  <maintainer email="ruixiang.du@westonrobot.com">Ruixiang Du</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  <build_type>ament_cmake</build_type>
</export>
</package>
